--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.2
 mypy==1.0.0
 mypy-extensions==1.0.0
+psutil==5.9.4
 sniffio==1.3.0
 starlette==0.24.0
 typing_extensions==4.4.0
