--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,11 @@ mypy==1.0.0
 mypy-extensions==1.0.0
 psutil==5.9.4
 pycodestyle==2.10.0
+pydantic==1.10.4
 sniffio==1.3.0
 SQLAlchemy==1.4.48
+SQLAlchemy-Utils==0.41.1
 starlette==0.24.0
 tomli==2.0.1
-typing-extensions==4.4.0
+typing_extensions==4.4.0
 uvicorn==0.20.0
