--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+aiosqlite==0.19.0
 anyio==3.6.2
 autopep8==2.0.1
 click==8.1.3
 colorama==0.4.6
+databases==0.7.0
+greenlet==2.0.2
 h11==0.14.0
 idna==3.4
 Jinja2==3.1.2
@@ -11,10 +14,13 @@ mypy-extensions==1.0.0
 Pillow==9.5.0
 psutil==5.9.4
 pycodestyle==2.10.0
+pydantic==1.10.4
 pystray==0.19.4
 python-xlib==0.33
 six==1.16.0
 sniffio==1.3.0
+SQLAlchemy==1.4.48
+SQLAlchemy-Utils==0.41.1
 starlette==0.24.0
 tomli==2.0.1
 typing_extensions==4.4.0
